Fixed that the change password dialog was hidden behind personal info inputs on IE11 and iOS Safari + made personal info dialog inputs arrange properly on iOS Safari (though still too short) + made the dialog scrollable on overflow + made the CTAs fixed below desktop when the content gets to high for the viewport

--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -178,3 +178,17 @@
     &-vertical { flex-direction: column; }
   }
 }
+
+.btnGroupWrap {
+  display: flex;
+  justify-content: center;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  background-color: $color-base-lighter-7;
+  padding: $scale;
+  @include breakpoint( 'desktop' ) {
+    border-top: 1px solid $color-base-lighter-6;
+    position: fixed !important;
+  }
+}
